changing the package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "start": "node ./public/index.js",
+    "start": "node public/index.js",
     "build": "tsc"
   },
   "keywords": [],
