changing the config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 #orbs
 orbs:
   node: circleci/node@4.1.0
-
+  coveralls: coveralls@2.2.1
 workflows:
   build:
     jobs:
@@ -11,7 +11,7 @@ workflows:
 jobs:
   build:
     docker:
-      - image: cimg/node:16.13.2
+      - image: cimg/node:18.18.0
     steps:
       - checkout
       - run:
@@ -23,3 +23,4 @@ jobs:
             echo "##[endgroup]"
       - run: npm ci
       - run: npm test
+      -coveralls/upload
