--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 #orbs
 orbs:
   node: circleci/node@4.1.0
-  coveralls: coveralls@2.2.1
+  coveralls: coveralls/coveralls@2.2.1
 workflows:
   build:
     jobs:
